docs, added intro + mongodb setip

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,13 +1,37 @@
 # Introduction 👋
 
- 
+Welcome to the NextUpKit documentation! This guide is your go-to resource for setting up and utilizing the powerful features of our template.
 
-Welcome to the LectureKit documentation! This guide will provide you with an overview of our features.
-Whether you're embedding courses onto your website or you're a developer looking to integrate courses using our API, we've got you covered.
+## Getting Started
 
+1. **Clone the Repository**:
 
-### Getting started:
-    - [Embedding](/embed) - explains how you can embed your courses on your sites.
-    - [LectureKit API](/developers/getting-started) - this section provides information on using the LectureKit API for developers.
+   ```bash copy
+   git clone https://github.com/geiger01/nextupkit my-app
+   ```
 
+2. **Remove Existing Git Origin**:
+
+   ```bash copy
+   git remote remove origin
+   ```
+
+3. **Install Dependencies**:
+
+   ```bash copy
+   cd my-app
+   npm install
+   ```
+
+4. **Run Locally**:
+
+   ```bash copy
+   npm run dev
+   ```
+
+   Open [http://localhost:3000](http://localhost:3000) to view it in your browser.
+
+## .env file
+
+Rename the `.env.example` file to `.env.local`
 
