--- a/pages/authentication/github.mdx
+++ b/pages/authentication/github.mdx
@@ -1,40 +1,22 @@
-# Authentication
+# GitHub Authentication
 
-To interact with our API, you'll authenticate requests using the `x-api-key` header. Manage your API key securely in your project API Keys page.
+Follow these steps to set up GitHub Authentication.
 
-Your API key grants significant privileges, so it's crucial to keep it confidential. Avoid sharing your API key in public repositories, client-side code, or any publicly accessible areas.
+## Step 1: Create a GitHub OAuth App
 
-## Usage
+1. Go to [GitHub Developer Settings](https://github.com/settings/developers).
+2. Click on "New OAuth App" to create a new application.
+3. Fill in the necessary details:
+   - **Application name**: Choose a name for your app.
+   - **Homepage URL**: Add the homepage URL for your app.
+   - **Authorization callback URL**:
+     - `http://localhost:3000/api/auth/callback/github` for local development.
+     - `https://your-app.com/api/auth/callback/github` for production.
+4. Click "Register Application."
 
-To make API requests, include your API key in the `x-api-key` header of your HTTP requests. Here are examples for both Node.js and cURL:
+## Step 2: Copy Credentials to `.env.local`
 
-### Node.js Example (with Axios)
-
-```js copy
-const axios = require('axios');
-
-async function getData() {
-    const response = await axios.get('https://www.lecturekit.io/api/v1/courses', {
-        headers: {
-            'x-api-key': 'YOUR_API_KEY'
-        }
-    });
-
-    return response.data;
-}
-
-getData();
-```
-
-### cURL Example
-```curl copy
-curl https://www.lecturekit.io/api/v1/courses \
-  -H 'x-api-key: YOUR_API_KEY'
-```
-
-## Important Security Reminders
-
-- **Security First:** Your API key is sensitive information, treat it as such.
-- **Authentication is Mandatory:** API requests without authentication will fail.
-
-Remember, your API key is your access pass, so guard it wisely!
+1. After registering your OAuth app, you will receive a `Client ID` and `Client Secret`.
+2. In your project’s `.env.local` file, add the following environment variables and paste the values:
+   - `GITHUB_CLIENT_ID`
+   - `GITHUB_CLIENT_SECRET`
