nvm 18 message added

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -23,6 +23,14 @@ Welcome to the NextUpKit documentation! This guide is your go-to resource for se
    npm install
    ```
 
+> **Note:** Ensure you're using Node.js version 18 or higher.  
+> If needed, use [nvm](https://github.com/nvm-sh/nvm) to switch Node.js versions:
+>
+> ```bash copy
+> nvm install 18
+> nvm use 18
+> ```
+
 4. **Run Locally**:
 
    ```bash copy
@@ -34,4 +42,3 @@ Welcome to the NextUpKit documentation! This guide is your go-to resource for se
 ## .env file
 
 Rename the `.env.example` file to `.env.local`
-
