small docs changes

--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -10,16 +10,21 @@ Welcome to the NextUpKit documentation! This guide is your go-to resource for se
    git clone https://github.com/geiger01/nextupkit my-app
    ```
 
-2. **Remove Existing Git Origin**:
+2. **Navigate to the Project Directory**:
+
+   ```bash copy
+   cd my-app
+   ```
+
+3. **Remove Existing Git Origin**:
 
    ```bash copy
    git remote remove origin
    ```
 
-3. **Install Dependencies**:
+4. **Install Dependencies**:
 
    ```bash copy
-   cd my-app
    npm install
    ```
 
