--- a/pages/analytics/google-analytics.mdx
+++ b/pages/analytics/google-analytics.mdx
@@ -6,10 +6,10 @@ Follow these steps to integrate Google Analytics.
 
 1. Go to the [Google Analytics](https://analytics.google.com/) website.
 2. Sign in with your Google account and create a new property for your website.
-3. In the left-hand menu, navigate to **Admin** > **Data Streams**.
-4. Click on "Create Stream" and select the **Web** option.
-5. Enter your website URL and stream name, then click "Create Stream."
-6. You'll receive a **Measurement ID** (e.g., `G-XXXXXXXXXX`).
+
+- In the left-hand menu, navigate to **Admin** > **+ Create** and select **Property**.
+
+3. You'll receive a **Measurement ID** (e.g., `G-XXXXXXXXXX`).
 
 ## Step 2: Add Measurement ID to `.env.local`
 
