--- a/pages/database/mongodb-setup.mdx
+++ b/pages/database/mongodb-setup.mdx
@@ -31,7 +31,7 @@ Follow these steps to set up MongoDB Atlas.
 ## Step 5: Get Your Mongo URI
 
 1. Go to the "Clusters" tab and click "Connect."
-2. Choose "Connect your application."
+2. Choose the "Drivers" option under the "Connect your application."
 3. Copy the provided MongoDB connection string (URI) for your cluster.
 
 ## Step 6: Add the Mongo URI to `.env.local`
